# Syspop

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  env.yml  gemini.md  jules.md  makefile  mypy.ini  pixi.toml  pyproject.toml
.github/workflows/: mypy.yml  python_lint.yml  ruff.yml
docs/: conf.py  index.rst  modules.rst  syspop.python.address.rst  syspop.python.base_pop.rst  syspop.python.commute.rst  syspop.python.diary.rst  syspop.python.household.rst  syspop.python.init.rst  syspop.python.input.rst  syspop.python.school.rst  syspop.python.shared_space.rst  syspop.python.utils.rst  syspop.python.vis.rst  syspop.python.work.rst  syspop.start.rst
etc/archive/: llamaindex_test_dataframe.py  llamaindex_test_texts.py
etc/archive/ipf_synpop/: ipf.py
etc/archive/route_model/: create_routes.py  plot_routes.py  run_wrapper.py
etc/archive/route_model/archive/: create_agents_movement_animation.py
etc/archive/var_synpop/: combine_png.py  ctgan_test_variational.py
etc/examples/: run_diary.py  run_nz.py  run_vis.py
etc/llm-diary/: combine_diary.py  create_diary.py
etc/llm-diary/funcs/: create.py  utils.py  vis.py
etc/scripts_nz/: create_nz_data.py  get_osm_data.py
etc/scripts_nz/etc/: process_data_explore_income.py  process_data_explorer_pop_structure.py
etc/scripts_nz/funcs/: __init__.py  postproc.py  preproc.py  utils.py  var.py  wrapper.py
syspop/: start.py
syspop/python/: __init__.py  address.py  base_pop.py  commute.py  diary.py  household.py  input.py  school.py  shared_space.py  utils.py  vis.py  work.py
(+8 files in other folders)
